# mpv-ytdl-gui

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  formats.cpp  formats.h  main.cpp  main.qml  mainform.cpp  mainform.h  passwordhandler.cpp  passwordhandler.h  qml.qrc  ytdlp.cpp  ytdlp.h
cmake/: backtrace.cmake
media/: io.github.hirsizlik.mpv-ytdl-gui.desktop
rust/: Cargo.toml
rust/src/: get_video_formats.py  lib.rs
